--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -53,7 +53,8 @@ deepspeed>=0.12.3
 fire>=0.6.0
 peft==0.14.0
 torch>=2.1.2
-transformers==4.51.3
+#transformers==4.51.3
+transformers==4.57.3
 collie-lm>=1.0.7
 faiss-cpu>=1.8.0
 google>=3.0.0
@@ -61,7 +62,8 @@ scikit-learn>=1.5.0
 tensorboard>=2.16.2
 tensorboard-data-server>=0.7.2
 torchvision>=0.16.2
-vllm==0.7.3
+#vllm==0.7.2
+vllm==0.11.2
 wandb>=0.17.0
 chattts
 funasr
