--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -1,7 +1,7 @@
 toml
 fastapi>=0.111.0
 loguru>=0.7.2
-pydantic<=2.10.6
+#pydantic<=2.10.6 leave vllm to install 
 requests>=2.32.2
 uvicorn
 cloudpickle>=3.0.0
@@ -63,7 +63,7 @@ tensorboard>=2.16.2
 tensorboard-data-server>=0.7.2
 torchvision>=0.16.2
 #vllm==0.7.2
-vllm==0.11.2
+vllm==0.10.2
 wandb>=0.17.0
 chattts
 funasr
@@ -86,7 +86,7 @@ pytesseract
 openai-whisper
 qwen-vl-utils
 accelerate==1.6.0
-lmdeploy==0.8.0
+lmdeploy==0.11.0
 boto3
 botocore
 ftfy==6.3.1
