--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -63,35 +63,35 @@ tensorboard>=2.16.2
 tensorboard-data-server>=0.7.2
 torchvision>=0.16.2
 #vllm==0.7.2
-vllm==0.10.2
+vllm==0.12.0
 wandb>=0.17.0
 chattts
 funasr
 timm
 diffusers==0.33.1
-sortedcontainers
+#sortedcontainers
 flash-attn
 lightllm
 lazyllm-llamafactory==0.9.4.dev2
-rotary-embedding-torch
+#rotary-embedding-torch
 infinity-emb==0.0.70
-ctranslate2
+#ctranslate2
 optimum==1.16.2
-typer
+#typer
 pymongo
 pymysql
 flagembedding
 mcp>=1.5.0
 pytesseract
-openai-whisper
-qwen-vl-utils
+#openai-whisper
+#qwen-vl-utils
 accelerate==1.6.0
 lmdeploy==0.11.0
 boto3
 botocore
-ftfy==6.3.1
-imageio==2.37.0
-imageio-ffmpeg==0.6.0
+#ftfy==6.3.1
+#imageio==2.37.0
+#imageio-ffmpeg==0.6.0
 volcengine-python-sdk[ark]>=4.0.6
 dashscope>=1.23.6
 zhipuai>=2.1.5.20250708
