--- a/Dockerfile.nocuda
+++ b/Dockerfile.nocuda
@@ -1,5 +1,5 @@
-# 使用 NVIDIA 官方 CUDA 镜像（解决 CUDA 头文件冲突问题）
-FROM nvidia/cuda:12.8.0-devel-ubuntu22.04
+# 使用 Python slim 镜像（与 registry.cn-hangzhou.aliyuncs.com/lazyllm/lazyllm 一致）
+FROM registry.cn-hangzhou.aliyuncs.com/lazyllm/python:3.10-slim
 
 # 设置环境变量
 ENV LANG=C.UTF-8
@@ -11,17 +11,15 @@ ENV DEBIAN_FRONTEND=noninteractive
 # 设置时区
 RUN ln -sf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-# 替换为阿里云 Ubuntu 镜像源（加速下载）
-RUN sed -i 's|archive.ubuntu.com|mirrors.aliyun.com|g' /etc/apt/sources.list && \
-    sed -i 's|security.ubuntu.com|mirrors.aliyun.com|g' /etc/apt/sources.list || true
+# 替换为阿里云 Debian 镜像源
+RUN sed -i 's|deb.debian.org|mirrors.aliyun.com|g' /etc/apt/sources.list.d/debian.sources 2>/dev/null || \
+    sed -i 's|deb.debian.org|mirrors.aliyun.com|g' /etc/apt/sources.list 2>/dev/null || true && \
+    sed -i 's|security.debian.org|mirrors.aliyun.com|g' /etc/apt/sources.list.d/debian.sources 2>/dev/null || \
+    sed -i 's|security.debian.org|mirrors.aliyun.com|g' /etc/apt/sources.list 2>/dev/null || true
 
-# 安装 Python 3.10 和系统依赖
-# libgl1 用于 paddleocr/opencv（在 Ubuntu 22.04+ 中，libgl1-mesa-glx 已被替换为 libgl1）
+# 安装系统依赖（不包含 CUDA 开发工具）
+# libgl1 用于 paddleocr/opencv（在 Debian 12+ 中，libgl1-mesa-glx 已被替换为 libgl1）
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3.10 \
-    python3.10-dev \
-    python3-pip \
-    python3.10-venv \
     gcc \
     g++ \
     git \
@@ -34,17 +32,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
-# 创建 python 和 pip 的软链接
-RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.10 1 && \
-    update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1
-
 # 升级 pip
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel
-
-# CUDA 环境变量（NVIDIA 镜像已自动设置，显式设置以确保正确）
-ENV CUDA_HOME=/usr/local/cuda
-ENV PATH=${CUDA_HOME}/bin:${PATH}
-ENV LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
 
 # 设置工作目录
 WORKDIR /app
