wan2.1 & dsocr fix

--- a/requirements.full.txt
+++ b/requirements.full.txt
@@ -90,9 +90,10 @@ accelerate==1.6.0
 lmdeploy==0.11.1
 boto3
 botocore
-#ftfy==6.3.1
-#imageio==2.37.0
-#imageio-ffmpeg==0.6.0
+#below three used for wan2
+ftfy==6.3.1
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
 volcengine-python-sdk[ark]>=4.0.6
 dashscope>=1.23.6
 zhipuai>=2.1.5.20250708
